# Tequity

./: .firebaserc  README.md  REFACTOR.md  firebase.json  pyproject.toml  test_e2e.py
docs/: ARCHITECTURE.md
functions/: gmail_oauth.py  graph.py  main.py  nodes.py  prompts.py  requirements.txt  services.py  state.py
