[project]
name = "tequity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=6.5.0",
    "firebase-functions>=0.1.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-kms>=3.12.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-firestore>=0.1.7",
]
